<resources>
    <string name="app_name">Medical Home</string>
    <string name="password">Password</string>
    <string name="_24_7_medicalcare">24*7 MEDICAL-CARE</string>
    <string name="login_page">Login Page</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register_for_new_user">Register for New User</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="Register">Register</string>
    <string name="Already_have_an_account">Already have an account ?</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="_24_7_medical_care">24*7 Medical-Care</string>
    <string name="lab_test">LAB TEST</string>
    <string name="buy_medicine">BUY MEDICINE</string>
    <string name="find_doctor">FIND DOCTOR</string>
    <string name="health_articles">HEALTH ARTICLES</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="logout">LOGOUT</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="family_physicians">FAMILY PHYSICIANS</string>
    <string name="dieticians">DIETICIANS</string>
    <string name="dentist">DENTIST</string>
    <string name="surgeon">SURGEON</string>
    <string name="cardiologists">CARDIOLOGISTS</string>
    <string name="back">BACK</string>
    <string name="default_text">Default Text</string>
    <string name="textview">Textview</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="fees">Fees</string>
    <string name="select_date">Select Date</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="select_time">Select Time</string>
    <string name="_00_00">00:00</string>
    <string name="doctors">Doctors</string>
    <string name="deliver_location_pune">Deliver Location : Pune</string>
    <string name="lab_test_packages"><![CDATA[Lab Test & Packages]]></string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="hello">Hi! \n\nHello</string>
    <string name="checkout">Checkout</string>
    <string name="lab_test_cart_items">Lab Test Cart Items</string>
    <string name="pin_code">Pin Code</string>
    <string name="checkoutHead">CHECKOUT</string>
    <string name="book">BOOK</string>
    <string name="order_detail">ORDER DETAILS</string>
    <string name="buy_medicines">Buy Medicines</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="medicine_cart_items">Medicine Cart Items</string>
    <string name="health_articles_details">Health Articles Details</string>
    <string name="welcome_to_our_app">Welcome to Our App!</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_our_medical_home_app">Welcome to our Medical Home App!</string>
    <string name="welcome_to_medical_home">Welcome to Medical Home</string>
    <string name="made_by_nikhil">Made by @Nikhil ©️2024–2025</string>
</resources>