<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyMedicineDetailsActivity"
    android:background="@drawable/back1">

    <TextView
        android:id="@+id/textViewBMDPackageName"
        android:layout_width="357dp"
        android:layout_height="47dp"
        android:layout_marginTop="52dp"
        android:text="@string/buy_medicines"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMDTitle" />

    <TextView
        android:id="@+id/textViewBMDName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_24_7_medicalcare"
        android:textColor="@android:color/holo_purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/textViewBMDTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_location_pune"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMDName"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/editTextBMDTextMultiLine"
        android:layout_width="352dp"
        android:layout_height="324dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="8sp"
        android:padding="10dp"
        android:text="@string/hello"
        android:textColor="@color/white_smoke"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMDPackageName"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonBMDBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBMDAddToCart"
        android:layout_width="181dp"
        android:layout_height="45dp"
        android:layout_marginBottom="36dp"
        android:text="@string/add_to_cart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewBMDTotalCost"
        android:layout_width="180dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@color/crimson"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintVertical_bias="0.517"
        app:layout_constraintTop_toBottomOf="@+id/editTextBMDTextMultiLine" />


</androidx.constraintlayout.widget.ConstraintLayout>