<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LabTestDetailsActivity"
    android:background="@drawable/back1">


    <TextView
        android:id="@+id/textViewLDPackageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_test_packages"
        android:textColor="@color/cold"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLDName"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/textViewLDName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_24_7_medicalcare"
        android:textColor="@android:color/holo_purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/textViewLDTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_location_pune"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLDName"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/editTextLDTextMultiLine"
        android:layout_width="356dp"
        android:layout_height="354dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="8sp"
        android:padding="10dp"
        android:text="@string/hello"
        android:textColor="@color/white_smoke"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLDPackageName"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonLDBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLDAddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLDTotalCost"
        android:layout_width="180dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@color/crimson"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintVertical_bias="0.517"
        app:layout_constraintTop_toBottomOf="@+id/editTextLDTextMultiLine" />


</androidx.constraintlayout.widget.ConstraintLayout>