<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartLabActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textViewCartPackageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_test_cart_items"
        android:textColor="@color/cold"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartName"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/textViewCartName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_24_7_medicalcare"
        android:textColor="@android:color/holo_purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textViewCartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_location_pune"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartName"
        app:layout_constraintVertical_bias="0.018" />

    <ListView
        android:id="@+id/listViewCart"
        android:layout_width="364dp"
        android:layout_height="396dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="4sp"
        android:padding="10dp"
        android:textColor="@color/white_smoke"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewCartPackageName"
        app:layout_constraintStart_toStartOf="@+id/textViewCartPackageName"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartPackageName"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonCartBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCartTime"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonCartCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/checkout"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCartDate"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewCartTotalCost"
        android:layout_width="200dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@color/dark_goldenrod"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewCart" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"

        android:text="@string/select_date"
        android:textColor="@color/light_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartTotalCost" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="110dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"

        android:text="@string/select_time"
        android:textColor="@color/light_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartTotalCost" />

    <Button
        android:id="@+id/buttonCartDate"
        style="?android:spinnerStyle"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/dd_mm_yyyy"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartTotalCost" />

    <Button
        android:id="@+id/buttonCartTime"
        style="?android:spinnerStyle"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/_00_00"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartTotalCost" />


</androidx.constraintlayout.widget.ConstraintLayout>