<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartBuyMedicineActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textViewBMCartPackageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_cart_items"
        android:textColor="@color/cold"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMCartName"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/textViewBMCartName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_24_7_medicalcare"
        android:textColor="@android:color/holo_purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textViewBMCartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_location_pune"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMCartName"
        app:layout_constraintVertical_bias="0.018" />

    <ListView
        android:id="@+id/listViewBMCart"
        android:layout_width="364dp"
        android:layout_height="396dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="4sp"
        android:padding="10dp"
        android:textColor="@color/white_smoke"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewBMCartPackageName"
        app:layout_constraintStart_toStartOf="@+id/textViewBMCartPackageName"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMCartPackageName"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonBMCartBack"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBMCartCheckout"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:text="@string/checkout"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBMCartDate"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/textViewBMCartTotalCost"
        android:layout_width="200dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@color/dark_goldenrod"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewBMCart" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="182dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:text="@string/delivery_date"
        android:textAlignment="center"
        android:textColor="@color/light_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMCartTotalCost" />

    <Button
        android:id="@+id/buttonBMCartDate"
        style="?android:spinnerStyle"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/dd_mm_yyyy"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMCartTotalCost" />

</androidx.constraintlayout.widget.ConstraintLayout>